# snapall

snapall/: AUTHORS  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.in
snapall/images/: Makefile  snap_icons.h
snapall/po/: POTFILES.in  ru.po
snapall/src/: Makefile.am  Makefile.in  configfile.c  configfile.h  eggtrayicon.c  eggtrayicon.h  key.c  key.h  prefswin.c  prefswin.h  snap.c  snap.h  utils.c  utils.h
